--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TITEL_EINGEBEN</title>
+    <title>RehabilitHair – Home</title>
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/index.css" />
   </head>
 
   <body>
-    <div class="header">header</div>
-    <div class="content">
-      Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum
-      Lorem ipsum Lorem ipsum Lorem ipsum <br />
-      <a href="./game.html">Zum Game</a>
-    </div>
-    <div class="footer">footer</div>
-    <script src="./js/index.js"></script>
+   <header>
+      <h1>Rehabilithair</h1>
+    </header>
+    <main>
+      <p>grid-container vorbereitung:</p>
+      <div class="grid-container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
