--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>RehabilitHair – Home</title>
-    <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/index.css" />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/common.css" />
   </head>
-
   <body>
-   <header>
+    <header>
+      <nav>
+        <img class="logo-header" src="images/Logo.png" alt="logo" />
+        <a class="active" href="Index.html">Home</a>
+        <a href="shop.html">Shop</a>
+        <a href="about_us.html">Über uns</a>
+      </nav>
       <h1>Rehabilithair</h1>
     </header>
     <main>
@@ -23,6 +31,8 @@
         <div>6</div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <p>impressum, Logo und weiteres in Footer</p>
+    </footer>
   </body>
 </html>
