--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="" />
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
