--- a/about_us.html
+++ b/about_us.html
@@ -1,54 +1,178 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Über uns</title>
+    <title>RehabilitHair – Über uns</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <script src="js/common.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
-      <nav>
-        <img class="logo-header" src="images/Logo.png" alt="logo" />
-        <a href="Index.html">Home</a>
-        <a href="shop.html">Shop</a>
-        <a class="active" href="about_us.html">Über uns</a>
-      </nav>
-      <h1>Über uns</h1>
+      <div class="header_content">
+        <nav>
+          <img class="logo-header" src="images/Logo.png" alt="logo" />
+          <a href="Index.html">Home</a>
+          <a href="shop.html">Shop</a>
+          <a class="active" href="about_us.html">Über uns</a>
+        </nav>
+        <div class="header_title">
+          <h1>Über uns</h1>
+          <div class="header_text">
+            <p>
+              Pflege dein Haar mit RehabilitHair. Unsere Formeln kombinieren
+              Effizienz und Nachhaltigkeit für sichtbar gesünderes Haar.
+            </p>
+            <p>
+              Tauche ein in die Welt der spezialisierten Haarpflege, die auf
+              deine Bedürfnisse abgestimmt ist.
+            </p>
+          </div>
+        </div>
+      </div>
     </header>
     <main>
-      <p>grid-container vorbereitung:</p>
       <div class="grid-container">
+        <div class="item1">
+          <p>grid-container vorbereitung:</p>
+        </div>
         <div>1</div>
         <div>2</div>
         <div>3</div>
         <div>4</div>
         <div>5</div>
         <div>6</div>
+        <div>7</div>
+        <div>8</div>
       </div>
       <div class="form">
-        <form action="xy">
+        <form action="xy" method="post">
           <div class="formelements">
-            <label for="firstname">Vorname</label>
-            <input type="text" name="firstname" id="firstname" />
-          </div>
-          <div class="formelements">
-            <label for="lastname">Nachname</label>
-            <input type="text" name="lastname" id="lastname" />
+            <label for="firstname">Name</label>
+            <input
+              type="text"
+              name="name"
+              id="name"
+              placeholder="Nachname Vorname"
+            />
+            <div class="error"></div>
           </div>
           <div class="formelements">
             <label for="email">E-Mail</label>
-            <input type="email" name="email" id="email" />
+            <input
+              type="email"
+              name="email"
+              id="email"
+              placeholder="muster@mail.com"
+            />
+            <div class="error"></div>
+          </div>
+          <div class="formelements">
+            <label for="tel">Telefonnummer</label>
+            <input
+              type="number"
+              name="tel"
+              id="tel"
+              placeholder="+41792002020"
+            />
+            <div class="error"></div>
+          </div>
+          <div class="formelements">
+            <label for="tel">Deine Nachricht</label>
+            <textarea
+              rows="4"
+              cols="50"
+              name="text"
+              id="text"
+              placeholder="Schreibe uns eine Nachricht"
+            ></textarea>
+          </div>
+          <div class="formelements">
+            <input
+              class="submitbutton"
+              type="submit"
+              value="Formular Absenden"
+            />
           </div>
         </form>
       </div>
     </main>
     <footer>
-      <p>impressum, Logo und weiteres in Footer</p>
+      <div class="footer_content">
+        <div>
+          <img class="logo-footer" src="images/Logo.png" alt="Logo" />
+          <div class="sm-icons">
+            <a
+              href="https://www.instagram.com/explore/tags/haircare/"
+              target="_blank"
+              ><img
+                class="socialmedia"
+                src="images/instagram2.png"
+                alt="instagram"
+            /></a>
+            <a
+              href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+              target="_blank"
+              ><img class="socialmedia" src="images/tiktok.png" alt="TikTok"
+            /></a>
+            <a
+              href="https://www.facebook.com/haircareangels/?locale=de_DE"
+              target="_blank"
+              ><img
+                class="socialmedia"
+                src="images/facebook.png"
+                alt="facebook"
+            /></a>
+            <a
+              href="https://www.linkedin.com/company/haircaregroup/?originalSubdomain=de"
+              target="_blank"
+              ><img
+                class="socialmedia"
+                src="images/linkedin.png"
+                alt="linkedin"
+            /></a>
+          </div>
+        </div>
+        <div>
+          <h4><strong>Kontakt</strong></h4>
+          <p>Zweifel Kira, Moll Sofia, Janine Studhalter</p>
+          <p>Musterstrasse 99</p>
+          <p>9999 Musterhausen</p>
+          <br />
+          <p>+41 79 200 20 20</p>
+          <p>muster@gmail.com</p>
+        </div>
+        <div>
+          <h4><strong>Produkte</strong></h4>
+          <p>Repair & Care</p>
+          <p>Hair Oiling</p>
+          <p>Styling</p>
+          <p>Coloring</p>
+        </div>
+        <div>
+          <h4><strong>Rechtliches</strong></h4>
+          <a class="norm-links" href="https://www.haar-shop.ch/de/impressum"
+            ><p>Impressum</p></a
+          >
+          <a class="norm-links" href="https://www.haar-shop.ch/de/datenschutz"
+            ><p>Datenschutz</p></a
+          >
+          <a class="norm-links" href="https://www.haar-shop.ch/de/agb"
+            ><p>AGBs</p></a
+          >
+          <p>Das ist ein Schulprojekt und keine reale Website</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
