--- a/shop.html
+++ b/shop.html
@@ -1,9 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>RehabilitHair – Shop</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="header_content">
+        <nav>
+          <img class="logo-header" src="images/Logo.png" alt="logo" />
+          <a href="Index.html">Home</a>
+          <a class="active" href="shop.html">Shop</a>
+          <a href="about_us.html">Über uns</a>
+        </nav>
+        <div class="header_title">
+          <h1>Shop</h1>
+          <div class="header_text">
+            <p>
+              Pflege dein Haar mit RehabilitHair. Unsere Formeln kombinieren
+              Effizienz und Nachhaltigkeit für sichtbar gesünderes Haar.
+            </p>
+            <p>
+              Tauche ein in die Welt der spezialisierten Haarpflege, die auf
+              deine Bedürfnisse abgestimmt ist.
+            </p>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <div class="grid-container">
+        <div class="item1">
+          <p>grid-container vorbereitung:</p>
+        </div>
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+        <div>6</div>
+        <div>7</div>
+        <div>8</div>
+      </div>
+    </main>
+    <footer>
+      <div class="footer_content">
+        <div>
+          <img class="logo-footer" src="images/Logo.png" alt="Logo" />
+          <div class="sm-icons">
+            <a
+              href="https://www.instagram.com/explore/tags/haircare/"
+              target="_blank"
+              ><img
+                class="socialmedia"
+                src="images/instagram2.png"
+                alt="instagram"
+            /></a>
+            <a
+              href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+              target="_blank"
+              ><img class="socialmedia" src="images/tiktok.png" alt="TikTok"
+            /></a>
+            <a
+              href="https://www.facebook.com/haircareangels/?locale=de_DE"
+              target="_blank"
+              ><img
+                class="socialmedia"
+                src="images/facebook.png"
+                alt="facebook"
+            /></a>
+            <a
+              href="https://www.linkedin.com/company/haircaregroup/?originalSubdomain=de"
+              target="_blank"
+              ><img
+                class="socialmedia"
+                src="images/linkedin.png"
+                alt="linkedin"
+            /></a>
+          </div>
+        </div>
+        <div>
+          <h4><strong>Kontakt</strong></h4>
+          <p>Zweifel Kira, Moll Sofia, Janine Studhalter</p>
+          <p>Musterstrasse 99</p>
+          <p>9999 Musterhausen</p>
+          <br />
+          <p>+41 79 200 20 20</p>
+          <p>muster@gmail.com</p>
+        </div>
+        <div>
+          <h4><strong>Produkte</strong></h4>
+          <p>Repair & Care</p>
+          <p>Hair Oiling</p>
+          <p>Styling</p>
+          <p>Coloring</p>
+        </div>
+        <div>
+          <h4><strong>Rechtliches</strong></h4>
+          <a class="norm-links" href="https://www.haar-shop.ch/de/impressum"
+            ><p>Impressum</p></a
+          >
+          <a class="norm-links" href="https://www.haar-shop.ch/de/datenschutz"
+            ><p>Datenschutz</p></a
+          >
+          <a class="norm-links" href="https://www.haar-shop.ch/de/agb"
+            ><p>AGBs</p></a
+          >
+          <p>Das ist ein Schulprojekt und keine reale Website</p>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
