game html aktualisiert 15.05.2024

--- a/game.html
+++ b/game.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>TITEL_EINGEBEN</title>
-    <link rel="stylesheet" href="css/common.css" />
-    <link rel="stylesheet" href="css/game.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/game.css" />
   </head>
 
   <body>
@@ -39,6 +39,6 @@
       </div>
     </div>
     <div class="footer">footer</div>
-    <script src="js/game.js"></script>
+    <script src="./js/game.js"></script>
   </body>
 </html>
