update V2 about us.html 15.05.2024

--- a/about_us.html
+++ b/about_us.html
@@ -22,7 +22,7 @@
       <div class="header_content">
         <nav>
           <img class="logo-header" src="images/Logo.png" alt="logo" />
-          <a href="Index.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="shop.html">Shop</a>
           <a class="active" href="about_us.html">Über uns</a>
         </nav>
