--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="header_content">
         <nav>
           <img class="logo-header" src="images/Logo.png" alt="logo" />
-          <a class="active" href="index.html">Home</a>
+          <a class="active" href="testing">Home</a>
           <a href="shop.html">Shop</a>
           <a href="about_us.html">Über uns</a>
         </nav>
