--- a/shop.html
+++ b/shop.html
@@ -21,7 +21,7 @@
       <div class="header_content">
         <nav>
           <img class="logo-header" src="images/Logo.png" alt="logo" />
-          <a href="Index.html">Home</a>
+          <a href="index.html">Home</a>
           <a class="active" href="shop.html">Shop</a>
           <a href="about_us.html">Über uns</a>
         </nav>
