--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RehabilitHair – Home</title>
+    <title>RehabilitHair – Über uns</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="/css/index.css" />
-    <link rel="stylesheet" href="/css/common.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/common.css" />
+    <script src="js/common.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,7 +22,7 @@
       <div class="header_content">
         <nav>
           <img class="logo-header" src="images/Logo.png" alt="logo" />
-          <a class="active" href="testing">Home</a>
+          <a class="active" href="index.html">Home</a>
           <a href="shop.html">Shop</a>
           <a href="about_us.html">Über uns</a>
         </nav>
