--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RehabilitHair – Über uns</title>
+    <title>RehabilitHair – Home</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -9,7 +9,6 @@
     />
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/common.css" />
-    <script src="js/common.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,10 +20,16 @@
     <header>
       <div class="header_content">
         <nav>
-          <img class="logo-header" src="images/Logo.png" alt="logo" />
-          <a class="active" href="index.html">Home</a>
-          <a href="shop.html">Shop</a>
-          <a href="about_us.html">Über uns</a>
+          <div>
+            <a href="index.html"
+              ><img class="logo-header" src="images/Logo.png" alt="logo"
+            /></a>
+          </div>
+          <div class="nav-text">
+            <a class="active" href="index.html">Home</a>
+            <a href="shop.html">Shop</a>
+            <a href="about_us.html">Über uns</a>
+          </div>
         </nav>
         <div class="header_title">
           <h1>Rehabilithair</h1>
@@ -44,16 +49,72 @@
     <main>
       <div class="grid-container">
         <div class="item1">
-          <p>grid-container vorbereitung:</p>
+          <p>Zum Gewinnspiel</p>
+          <div>
+            <button class="gewinnspiel-button">
+              <a href="game.html" target="_blank"
+                ><p class="gewinnspiel-text">Spiel starten</p></a
+              >
+            </button>
+          </div>
+          <div >
+            <p>
+              Starte das Spiel und sicher dir deinen exklusiven Rabattcode. Jetzt mitmachen und bei deinem nächsten Einkauf sparen!
+            </p>
+          </div>
         </div>
-        <div>1</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
+        <div class="item2">
+          <div>
+            <p>
+              Produkt des Monats
+            </p>
+            <img src="images/Jojobaoil.-bearbeitetpsd.png" alt="Jojoba Haaröl">
+          </div>
+          <div>
+            <p>
+              Jojoba Shine Essence
+            </p>
+            <p>
+              Dieses 100% natürliche Öl versorgt dein Haar intensiv mit Feuchtigkeit und Nährstoffen. Geeignet für alle Haartypen, um das Haar gesund zu halten. Es verleiht deinem Haar Glanz und Geschmeidigkeit, ohne zu beschweren. Perfekt für die tägliche Pflege, unterstützt es die Gesundheit deiner Haare und Kopfhaut. Hol dir das Must-Have für strahlend schönes Haar!
+            </p>
+          </div>
+        </div>
+        <div class="item3">
+          <div>
+            <p>
+              Warum RehabilitHair?
+            </p>
+            <p>
+              Bei uns steht Deine Haargesundheit im Mittelpunkt. Unsere Produkte sind wissenschaftlich entwickelt, um Haarprobleme zu lösen und das natürliche Gleichgewicht von Haar und Kopfhaut zu unterstützen. Sie sind aus hochwertigen Naturstoffen gefertigt, frei von schädlichen Chemikalien und passen zu jedem Haartyp. Mit RehabilitHair wählst Du nicht nur wirksame Pflegeprodukte, sondern unterstützt auch unser Engagement für Umweltschutz. Probiere es aus und spüre den Unterschied, den echte Pflege macht. Entdecke Produkte, die Dein Haar natürlich strahlen lassen.
+            </p>
+          </div>
+        </div>
+        <div class="item4">
+          <p>
+            Neueste Produkte
+          </p>
+          <div>
+            <img src="images/Rosemaryoil-bearbeitet.png" alt="Produkt 1">
+            <img src="images/Arganoil-bearbeitet.png" alt="Produkt 2">
+            <img src="images/Hairspray-bearbeitet.png" alt="Produkt 3">
+          </div>
+        </div>
+        <div class="item5">
+          <p>Top Brands</p>
+          <div class="brand-logo-container">
+            <img src="images/wella_logo.png" alt="Wella Logo" class="brand-logo">
+            <img src="images/schwarzkopf_logo.png" alt="Schwarzkopf Logo" class="brand-logo">
+            <img src="images/Kerastase-Logo.png" alt="Kerastase Logo" class="brand-logo">
+            <img src="images/got2b_logo.png" alt="got2b Logo" class="brand-logo">
+          </div>
+        </div>
+
+        <!--
         <div>5</div>
         <div>6</div>
         <div>7</div>
         <div>8</div>
+        -->
       </div>
     </main>
     <footer>
