--- a/shop.html
+++ b/shop.html
@@ -20,10 +20,16 @@
     <header>
       <div class="header_content">
         <nav>
-          <img class="logo-header" src="images/Logo.png" alt="logo" />
-          <a href="index.html">Home</a>
-          <a class="active" href="shop.html">Shop</a>
-          <a href="about_us.html">Über uns</a>
+          <div>
+            <a href="index.html"
+              ><img class="logo-header" src="images/Logo.png" alt="logo"
+            /></a>
+          </div>
+          <div class="nav-text">
+            <a href="index.html">Home</a>
+            <a class="active" href="shop.html">Shop</a>
+            <a href="about_us.html">Über uns</a>
+          </div>
         </nav>
         <div class="header_title">
           <h1>Shop</h1>
@@ -43,16 +49,48 @@
     <main>
       <div class="grid-container">
         <div class="item1">
-          <p>grid-container vorbereitung:</p>
+          <p>
+            Kategorien
+          </p>
         </div>
-        <div>1</div>
-        <div>2</div>
+        <div class="item2">
+          <div>
+            <img src="images/repair.jpg" alt="Repair and Care" class="category-img">
+            <p>
+              Repair & Care
+            </p>
+          </div>
+          <div>
+            <img src="images/Jojobaoil.-bearbeitetpsd.png" alt="Hair Oiling" class="category-img">
+            <p>
+              Hair Oiling
+            </p>
+          </div>
+        </div>
+        <div class="item3">
+          <div>
+            <img src="images/styling.jpg" alt="Styling" class="category-img">
+            <p>
+              Styling
+            </p>
+          </div>
+          <div>
+            <img src="images/colouring.jpg" alt="Colouring" class="category-img">
+            <p>
+              Colouring
+            </p>
+          </div>
+        </div>
+
+        <!--
         <div>3</div>
         <div>4</div>
         <div>5</div>
         <div>6</div>
         <div>7</div>
         <div>8</div>
+        -->
+
       </div>
     </main>
     <footer>
