--- a/about_us.html
+++ b/about_us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
   <head>
     <title>RehabilitHair – Über uns</title>
     <meta charset="utf-8" />
@@ -15,6 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="assets/images/favicon.ico" />
   </head>
   <body>
     <header>
@@ -22,7 +23,7 @@
         <nav>
           <div>
             <a href="index.html"
-              ><img class="logo-header" src="images/Logo.png" alt="logo"
+              ><img class="logo-header" src="assets/images/Logo.png" alt="logo"
             /></a>
           </div>
           <div class="nav-text">
@@ -30,64 +31,76 @@
             <a href="shop.html">Shop</a>
             <a class="active" href="about_us.html">Über uns</a>
           </div>
+          <div id="menuToggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+              <li><a href="index.html">Home</a></li>
+              <li><a href="shop.html">Shop</a></li>
+              <li><a class="active" href="about_us.html">Über uns</a></li>
+            </ul>
+          </div>
         </nav>
         <div class="header_title">
-          <h1>Über uns</h1>
-          <div class="header_text">
-            <p>
-              Pflege dein Haar mit RehabilitHair. Unsere Formeln kombinieren
-              Effizienz und Nachhaltigkeit für sichtbar gesünderes Haar.
-            </p>
-            <p>
-              Tauche ein in die Welt der spezialisierten Haarpflege, die auf
-              deine Bedürfnisse abgestimmt ist.
-            </p>
-          </div>
+          <h1>ÜBER UNS</h1>
+          <div class="header_text"></div>
         </div>
       </div>
     </header>
     <main>
       <div class="grid-container">
         <div class="item1">
-          <p>
-            Unsere Mission und unsere Werte
-          </p>
-          <div>
-            <p>
-              Bei RehabilitHair ist es unsere Mission, die Haarpflegeindustrie zu revolutionieren, indem wir ausschließlich auf natürliche, vegane und tierversuchsfreie Inhaltsstoffe setzen. Unser Ziel ist es, die Gesundheit und das Wohlbefinden unserer Kunden durch Produkte zu fördern, die frei von harten Chemikalien sind und stattdessen nährende, ökologisch verantwortungsvolle Alternativen bieten.
-            </p>
-            <p>
-              Wir sind fest davon überzeugt, dass wahre Schönheit durch die Reinheit der Natur verstärkt wird. Deshalb engagieren wir uns dafür, nur die reinsten Zutaten zu verwenden, die sicher für unsere Kunden und schonend für den Planeten sind. Jedes unserer Produkte ist das Ergebnis rigoroser Forschung und Entwicklung, um sicherzustellen, dass es nicht nur effektiv, sondern auch umweltfreundlich ist.
-            </p>
-          </div>
-          <div>
-            <p>
-              Unser Engagement für Transparenz und Integrität spiegelt sich in jedem Schritt unseres Produktionsprozesses wider. Bei RehabilitHair fördern wir eine Gemeinschaft, die Wert auf gesundes Leben und nachhaltigen Konsum legt. Wir laden jeden ein, Teil dieser Bewegung zu werden, die nicht nur das Haar verschönert, sondern auch die Welt.
-            </p>
-            <img src="images/gruppe.jpg" alt="Teambild">
+          <div class="content-items">
+            <h3>UNSERE MISSION UND UNSERE WERTE</h3>
+            <div class="aboutus-content">
+              <div class="aboutus1">
+                <p>
+                  Bei RehabilitHair ist es unsere Mission, die
+                  Haarpflegeindustrie zu revolutionieren, indem wir
+                  ausschließlich auf natürliche, vegane und tierversuchsfreie
+                  Inhaltsstoffe setzen. Unser Ziel ist es, die Gesundheit und
+                  das Wohlbefinden unserer Kunden durch Produkte zu fördern, die
+                  frei von harten Chemikalien sind und stattdessen nährende,
+                  ökologisch verantwortungsvolle Alternativen bieten.
+                </p>
+                <p>
+                  Wir sind fest davon überzeugt, dass wahre Schönheit durch die
+                  Reinheit der Natur verstärkt wird. Deshalb engagieren wir uns
+                  dafür, nur die reinsten Zutaten zu verwenden, die sicher für
+                  unsere Kunden und schonend für den Planeten sind. Jedes
+                  unserer Produkte ist das Ergebnis rigoroser Forschung und
+                  Entwicklung, um sicherzustellen, dass es nicht nur effektiv,
+                  sondern auch umweltfreundlich ist.
+                </p>
+              </div>
+              <div class="aboutus2">
+                <p>
+                  Unser Engagement für Transparenz und Integrität spiegelt sich
+                  in jedem Schritt unseres Produktionsprozesses wider. Bei
+                  RehabilitHair fördern wir eine Gemeinschaft, die Wert auf
+                  gesundes Leben und nachhaltigen Konsum legt. Wir laden jeden
+                  ein, Teil dieser Bewegung zu werden, die nicht nur das Haar
+                  verschönert, sondern auch die Welt.
+                </p>
+                <img
+                  class="teampic"
+                  src="assets/images/gruppe.jpg"
+                  alt="Teambild"
+                />
+              </div>
+            </div>
           </div>
         </div>
-        <div class="item2">
-          <p>
-            KONTAKTIERE UNS
-          </p>
-          <p>
-            Hast Du Fragen, Wünsche oder Anregungen? Wir sind für Dich da.
-          </p>
-        </div>
-
-        <!--
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-          -->
-        
       </div>
-
-      <div class="form">
+      <div class="item2 item2-aboutus">
+        <div class="content-items">
+          <h3>KONTAKTIERE UNS</h3>
+          <p>Hast Du Fragen, Wünsche oder Anregungen? Wir sind für Dich da.</p>
+        </div>
+      </div>
+      <div class="form content-items">
         <form>
           <div class="formelements">
             <label for="name">Name</label>
@@ -142,28 +155,31 @@
     </main>
     <footer>
       <div class="footer_content">
-        <div>
-          <img class="logo-footer" src="images/Logo.png" alt="Logo" />
+        <div class="footer-items">
+          <img class="logo-footer" src="assets/images/Logo.png" alt="Logo" />
           <div class="sm-icons">
             <a
               href="https://www.instagram.com/explore/tags/haircare/"
               target="_blank"
               ><img
                 class="socialmedia"
-                src="images/instagram2.png"
+                src="assets/images/instagram2.png"
                 alt="instagram"
             /></a>
             <a
               href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
               target="_blank"
-              ><img class="socialmedia" src="images/tiktok.png" alt="TikTok"
+              ><img
+                class="socialmedia"
+                src="assets/images/tiktok.png"
+                alt="TikTok"
             /></a>
             <a
               href="https://www.facebook.com/haircareangels/?locale=de_DE"
               target="_blank"
               ><img
                 class="socialmedia"
-                src="images/facebook.png"
+                src="assets/images/facebook.png"
                 alt="facebook"
             /></a>
             <a
@@ -171,12 +187,12 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="images/linkedin.png"
+                src="assets/images/linkedin.png"
                 alt="linkedin"
             /></a>
           </div>
         </div>
-        <div>
+        <div class="footer-items">
           <h4><strong>Kontakt</strong></h4>
           <p>Zweifel Kira, Moll Sofia, Janine Studhalter</p>
           <p>Musterstrasse 99</p>
@@ -185,14 +201,14 @@
           <p>+41 79 200 20 20</p>
           <p>muster@gmail.com</p>
         </div>
-        <div>
+        <div class="footer-items">
           <h4><strong>Produkte</strong></h4>
           <p>Repair & Care</p>
           <p>Hair Oiling</p>
           <p>Styling</p>
           <p>Coloring</p>
         </div>
-        <div>
+        <div class="footer-items">
           <h4><strong>Rechtliches</strong></h4>
           <a class="norm-links" href="https://www.haar-shop.ch/de/impressum"
             ><p>Impressum</p></a
