--- a/shop.html
+++ b/shop.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
   <head>
     <title>RehabilitHair – Shop</title>
     <meta charset="utf-8" />
@@ -15,108 +15,123 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="assets/images/favicon.ico" />
   </head>
   <body>
     <header>
       <div class="header_content">
         <nav>
           <div>
-            <a href="index.html"
-              ><img class="logo-header" src="images/Logo.png" alt="logo"
-            /></a>
+            <a href="index.html">
+              <img
+                class="logo-header"
+                src="assets/images/Logo.png"
+                alt="logo"
+              />
+            </a>
           </div>
           <div class="nav-text">
             <a href="index.html">Home</a>
             <a class="active" href="shop.html">Shop</a>
             <a href="about_us.html">Über uns</a>
           </div>
+          <div id="menuToggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+              <li><a href="index.html">Home</a></li>
+              <li><a class="active" href="shop.html">Shop</a></li>
+              <li><a href="about_us.html">Über uns</a></li>
+            </ul>
+          </div>
         </nav>
         <div class="header_title">
-          <h1>Shop</h1>
-          <div class="header_text">
-            <p>
-              Pflege dein Haar mit RehabilitHair. Unsere Formeln kombinieren
-              Effizienz und Nachhaltigkeit für sichtbar gesünderes Haar.
-            </p>
-            <p>
-              Tauche ein in die Welt der spezialisierten Haarpflege, die auf
-              deine Bedürfnisse abgestimmt ist.
-            </p>
-          </div>
+          <h1>SHOP</h1>
         </div>
       </div>
     </header>
     <main>
       <div class="grid-container">
         <div class="item1">
-          <p>
-            Kategorien
-          </p>
+          <div class="content-items">
+            <h3>KATEGORIEN</h3>
+          </div>
+          <div class="content-items categories">
+            <a href="/shopsites/repair_and_care.html"
+              ><div>
+                <img
+                  src="assets/images/startbild-repair-and-care.png"
+                  alt="Repair and Care"
+                  class="category-img"
+                />
+                <p class="link-category">Repair & Care</p>
+              </div>
+            </a>
+            <a href="shopsites/oiling.html">
+              <div>
+                <img
+                  src="assets/images/oiling-startbild.png"
+                  alt="Hair Oiling"
+                  class="category-img"
+                />
+                <p class="link-category">Hair Oiling</p>
+              </div>
+            </a>
+          </div>
+          <br />
+          <br />
+          <div class="item2">
+            <div class="content-items categories">
+              <div>
+                <img
+                  src="assets/images/styling-startbild.png"
+                  alt="Styling"
+                  class="category-img"
+                />
+                <p>Styling</p>
+              </div>
+              <div>
+                <img
+                  src="assets/images/startbild-coloring.png"
+                  alt="Colouring"
+                  class="category-img"
+                />
+                <p>Colouring</p>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="item2">
-          <div>
-            <img src="images/repair.jpg" alt="Repair and Care" class="category-img">
-            <p>
-              Repair & Care
-            </p>
-          </div>
-          <div>
-            <img src="images/Jojobaoil.-bearbeitetpsd.png" alt="Hair Oiling" class="category-img">
-            <p>
-              Hair Oiling
-            </p>
-          </div>
-        </div>
-        <div class="item3">
-          <div>
-            <img src="images/styling.jpg" alt="Styling" class="category-img">
-            <p>
-              Styling
-            </p>
-          </div>
-          <div>
-            <img src="images/colouring.jpg" alt="Colouring" class="category-img">
-            <p>
-              Colouring
-            </p>
-          </div>
-        </div>
-
-        <!--
-        <div>3</div>
-        <div>4</div>
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        -->
-
       </div>
     </main>
     <footer>
       <div class="footer_content">
-        <div>
-          <img class="logo-footer" src="images/Logo.png" alt="Logo" />
+        <div class="footer-items">
+          <img class="logo-footer" src="assets/images/Logo.png" alt="Logo" />
           <div class="sm-icons">
             <a
               href="https://www.instagram.com/explore/tags/haircare/"
               target="_blank"
               ><img
                 class="socialmedia"
-                src="images/instagram2.png"
+                src="assets/images/instagram2.png"
                 alt="instagram"
             /></a>
             <a
               href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
               target="_blank"
-              ><img class="socialmedia" src="images/tiktok.png" alt="TikTok"
+              ><img
+                class="socialmedia"
+                src="assets/images/tiktok.png"
+                alt="TikTok"
             /></a>
             <a
               href="https://www.facebook.com/haircareangels/?locale=de_DE"
               target="_blank"
               ><img
                 class="socialmedia"
-                src="images/facebook.png"
+                src="assets/images/facebook.png"
                 alt="facebook"
             /></a>
             <a
@@ -124,12 +139,12 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="images/linkedin.png"
+                src="assets/images/linkedin.png"
                 alt="linkedin"
             /></a>
           </div>
         </div>
-        <div>
+        <div class="footer-items">
           <h4><strong>Kontakt</strong></h4>
           <p>Zweifel Kira, Moll Sofia, Janine Studhalter</p>
           <p>Musterstrasse 99</p>
@@ -138,14 +153,14 @@
           <p>+41 79 200 20 20</p>
           <p>muster@gmail.com</p>
         </div>
-        <div>
+        <div class="footer-items">
           <h4><strong>Produkte</strong></h4>
           <p>Repair & Care</p>
           <p>Hair Oiling</p>
           <p>Styling</p>
           <p>Coloring</p>
         </div>
-        <div>
+        <div class="footer-items">
           <h4><strong>Rechtliches</strong></h4>
           <a class="norm-links" href="https://www.haar-shop.ch/de/impressum"
             ><p>Impressum</p></a
