--- a/about_us.html
+++ b/about_us.html
@@ -7,15 +7,15 @@
       name="viewport"
       content="width=device-width, initial-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="css/index.css" />
-    <link rel="stylesheet" href="css/common.css" />
+    <link rel="stylesheet" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="assets/images/favicon.ico" />
+    <link rel="icon" href="./assets/images/favicon.ico" />
   </head>
   <body>
     <header>
@@ -23,7 +23,7 @@
         <nav>
           <div>
             <a href="index.html"
-              ><img class="logo-header" src="assets/images/Logo.png" alt="logo"
+              ><img class="logo-header" src="./assets/images/Logo.png" alt="logo"
             /></a>
           </div>
           <div class="nav-text">
@@ -86,7 +86,7 @@
                 </p>
                 <img
                   class="teampic"
-                  src="assets/images/gruppe.jpg"
+                  src="./assets/images/gruppe.jpg"
                   alt="Teambild"
                 />
               </div>
@@ -156,14 +156,14 @@
     <footer>
       <div class="footer_content">
         <div class="footer-items">
-          <img class="logo-footer" src="assets/images/Logo.png" alt="Logo" />
+          <img class="logo-footer" src="./assets/images/Logo.png" alt="Logo" />
           <div class="sm-icons">
             <a
               href="https://www.instagram.com/explore/tags/haircare/"
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/instagram2.png"
+                src="./assets/images/instagram.png"
                 alt="instagram"
             /></a>
             <a
@@ -171,7 +171,7 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/tiktok.png"
+                src="./assets/images/tiktok.png"
                 alt="TikTok"
             /></a>
             <a
@@ -179,7 +179,7 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/facebook.png"
+                src="./assets/images/facebook.png"
                 alt="facebook"
             /></a>
             <a
@@ -187,7 +187,7 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/linkedin.png"
+                src="./assets/images/linkedin.png"
                 alt="linkedin"
             /></a>
           </div>
@@ -223,7 +223,7 @@
         </div>
       </div>
     </footer>
-    <script src="js/server.js"></script>
-    <script src="js/common.js"></script>
+    <script src="./js/server.js"></script>
+    <script src="./js/common.js"></script>
   </body>
 </html>
