--- a/game.html
+++ b/game.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>RehabilitHair – Gewinnspiel</title>
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/game.css">
-    <link rel="icon" href="assets/images/favicon.ico">
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/game.css">
+    <link rel="icon" href="./assets/images/favicon.ico">
   </head>
 
   <body>
@@ -16,7 +16,7 @@
         <nav>
           <div>
             <a href="index.html"
-              ><img class="logo-header" src="assets/images/Logo.png" alt="logo"></a>
+              ><img class="logo-header" src="./assets/images/Logo.png" alt="logo"></a>
           </div>
           <div class="nav-text">
             <a href="index.html">Home</a>
@@ -69,7 +69,7 @@
 <!-- Popup Fenster wenn gewonnen-->
 <div id="pop-win" class="popup">
   <div class="popup-content">
-      <img class="icon" src="assets/images/checkmark.png" alt="Success Icon">
+      <img class="icon" src="./assets/images/checkmark.png" alt="Success Icon">
       <h1 class="gewonnen">Glückwunsch!</h1>
       <span id="win-score" class="score-text"></span>
       <p>Du hast einen speziellen Rabattcode für unseren Haarpflegeshop verdient!
@@ -82,7 +82,7 @@
 <!-- Popup Fenster wenn verloren -->
 <div id="pop-lose" class="popup">
   <div class="popup-content">
-      <img class="icon" src="assets/images/fail.png" alt="Fail Icon">
+      <img class="icon" src="./assets/images/fail.png" alt="Fail Icon">
       <h1 class="verloren">Schade :(</h1>
       <span id="lose-score" class="score-text"></span>
       <p>Leider hast du die Mindestpunktzahl von 500 Punkten nicht erreicht.
@@ -97,28 +97,28 @@
     <footer>
       <div class="footer_content">
         <div>
-          <img class="logo-footer" src="assets/images/Logo.png" alt="Logo">
+          <img class="logo-footer" src="./assets/images/Logo.png" alt="Logo">
           <div class="sm-icons">
             <a
               href="https://www.instagram.com/explore/tags/haircare/"
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/instagram2.png"
+                src="./assets/images/instagram2.png"
                 alt="instagram"></a>
             <a
               href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/tiktok.png"
+                src="./assets/images/tiktok.png"
                 alt="TikTok"></a>
             <a
               href="https://www.facebook.com/haircareangels/?locale=de_DE"
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/facebook.png"
+                src="./assets/images/facebook.png"
                 alt="facebook">
             </a>
             <a
@@ -126,7 +126,7 @@
               target="_blank"
               ><img
                 class="socialmedia"
-                src="assets/images/linkedin.png"
+                src="./assets/images/linkedin.png"
                 alt="linkedin"></a>
           </div>
         </div>
@@ -161,6 +161,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/game.js"></script>
+    <script src="./js/game.js"></script>
   </body>
 </html>
