--- a/game.html
+++ b/game.html
@@ -58,7 +58,7 @@
           <div>
             <img
             id="static-girl"
-            src="/assets/images/girl.png"
+            src="./assets/images/girl.png"
             alt="Static Image">
           </div>
           <div id="game-girl"></div>
